# equal-accessibility-bot

./: .env.example  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
bot/: main.py
bot/commands/: basic.py  calendar.py  scheduler.py
bot/services/: calendar_service.py  calendar_tasks.py  schedule_config.py  scheduler_service.py
bot/utils/: decorators.py
